refactor(commands): replace MixinCommandManager with RegisterCommandsEvent